--- a/Backend/course-service/src/main/resources/application.yaml
+++ b/Backend/course-service/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
   port: 8086
 
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
 
 spring:
   application:
@@ -17,6 +17,5 @@ spring:
       host: localhost
       database: course_db
       authentication-database: admin
-      uri: mongodb://root:123456@localhost:27017/admin
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
