done config-server applicaion.yml

--- a/Backend/settings.gradle
+++ b/Backend/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = 'Backend'
 include 'service-registry'
 include 'course-service'
 include 'schedule-service'
+include 'config-server'
