--- a/Backend/api-gateway/build.gradle
+++ b/Backend/api-gateway/build.gradle
@@ -13,6 +13,12 @@ java {
     }
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -22,34 +28,34 @@ ext {
 }
 
 dependencies {
+
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'org.postgresql:postgresql'
 
     // https://mvnrepository.com/artifact/io.micrometer/micrometer-tracing-bridge-brave
-    implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.4.3'
-
-    // https://mvnrepository.com/artifact/io.zipkin.reporter2/zipkin-reporter-brave
-    implementation 'io.zipkin.reporter2:zipkin-reporter-brave:3.4.3'
-// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
-    implementation 'org.springframework.cloud:spring-cloud-starter-config:4.2.0'
-// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
-// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-server
-    implementation 'org.springframework.cloud:spring-cloud-config-server:4.2.0'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+// https://mvnrepository.com/artifact/io.zipkin.reporter2/zipkin-reporter-brave
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-// https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 
 
-
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
