--- a/Backend/course-service/src/main/resources/application.yaml
+++ b/Backend/course-service/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
   port: 8086
 
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
 
 spring:
   application:
