--- a/Backend/enroll-service/build.gradle
+++ b/Backend/enroll-service/build.gradle
@@ -25,9 +25,27 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'org.postgresql:postgresql'
+	// https://mvnrepository.com/artifact/io.micrometer/micrometer-tracing-bridge-brave
+	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.4.3'
+// https://mvnrepository.com/artifact/io.zipkin.reporter2/zipkin-reporter-brave
+	implementation 'io.zipkin.reporter2:zipkin-reporter-brave:3.4.3'
+// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
+	implementation 'org.springframework.cloud:spring-cloud-starter-config:4.2.0'
+// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.4.2'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
