--- a/Backend/settings.gradle
+++ b/Backend/settings.gradle
@@ -5,5 +5,6 @@ include 'api-gateway'
 include 'auth-services'
 include 'faculty-service'
 include 'course-service'
+include 'enroll-service'
 include 'schedule-service'
 
