Backend: init grade-management-service: added models, dtos

--- a/Backend/settings.gradle
+++ b/Backend/settings.gradle
@@ -7,4 +7,5 @@ include 'faculty-service'
 include 'course-service'
 include 'enroll-service'
 include 'schedule-service'
+include 'grade-management-service'
 
