Write Docker for all service and docker-compose auth,faculty-service

--- a/Backend/api-gateway/src/main/resources/application.yml
+++ b/Backend/api-gateway/src/main/resources/application.yml
@@ -10,7 +10,8 @@ management:
   tracing:
     sampling:
       probability: 1.0
-
+  zipkin:
+    base-url: http://zipkin:9411
 spring:
   application:
     name: api-gateway
