--- a/Backend/course-service/Dockerfile
+++ b/Backend/course-service/Dockerfile
@@ -1,10 +1,10 @@
 FROM gradle:8.12.1-jdk17-alpine AS build
 WORKDIR /app
 COPY . /app
-RUN gradle build --no-daemon
+RUN gradle build -x test
 
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 COPY --from=build /app/build/libs/course-service-0.0.1-SNAPSHOT.jar course-service-0.0.1-SNAPSHOT.jar
-EXPOSE 8761
+EXPOSE 8086
 ENTRYPOINT ["java", "-jar", "course-service-0.0.1-SNAPSHOT.jar"]
