--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -277,6 +277,39 @@ services:
             memory: 512M
           reservations:
             memory: 256M
+
+  course-service:
+    image: 21086351huynhkimthanh/be-course-service:lastest
+    restart: always
+    ports:
+      - "8086:8086"
+    environment:
+      - CONFIG_SERVER_URL=http://config-server:8888
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+      - SPRING_APPLICATION_NAME=course-service
+      - SPRING_DATA_MONGODB_PORT=27017
+      - SPRING_DATA_MONGODB_HOST=db-mongodb-con
+      - SPRING_DATA_MONGODB_DATABASE=course_db
+      - SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE=admin
+      - SPRING_DATA_MONGODB_URI=mongodb://root:123456@mongodb:27017/admin
+    volumes:
+      - ./UniEnrollSystemBE/course-service:/config
+    depends_on:
+      - service-registry
+      - config-server
+      - apigateway
+      - mongodb
+    networks:
+      - backend
+      - mongodb-net
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: 512M
+        reservations:
+          memory: 256M
+
 volumes:
   postgres-data:
   mongodb-data:
