--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,7 +228,7 @@ services:
       - MANAGEMENT_ZIPKIN_TRACING_ENDPOINT=http://zipkin:9411/api/v2/spans
       - SPRING_SLEUTH_SAMPLER_PROBABILITY=1.0
     volumes:
-      - ./Backend/auth-service:/config
+      - ./Backend/auth-services:/config
     networks:
       - backend
       - redis-net
@@ -288,12 +288,12 @@ services:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
       - SPRING_APPLICATION_NAME=course-service
       - SPRING_DATA_MONGODB_PORT=27017
-      - SPRING_DATA_MONGODB_HOST=db-mongodb-con
+      - SPRING_DATA_MONGODB_HOST=mongodb
       - SPRING_DATA_MONGODB_DATABASE=course_db
       - SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE=admin
       - SPRING_DATA_MONGODB_URI=mongodb://root:123456@mongodb:27017/admin
     volumes:
-      - ./UniEnrollSystemBE/course-service:/config
+      - ./Backend/course-service:/config
     depends_on:
       - service-registry
       - config-server
@@ -309,6 +309,47 @@ services:
           memory: 512M
         reservations:
           memory: 256M
+
+  schedule-service:
+    image: 21086351huynhkimthanh/be-schedule-service:lastest
+    environment:
+      - CONFIG_SERVER_URL=http://config-server:8888
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+      - SPRING_DATA_MONGODB_PORT=27017
+      - SPRING_DATA_MONGODB_HOST=mongodb
+      - SPRING_DATA_MONGODB_DATABASE=schedule_db
+      - SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE=admin
+      - SPRING_DATA_MONGODB_URI=mongodb://root:123456@mongodb:27017/admin
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+      - SPRING_KAFKA_CONSUMER_GROUP_ID=schedule-group
+      - SPRING_KAFKA_CONSUMER_AUTO_OFFSET_RESET=earliest
+      - SPRING_KAFKA_CONSUMER_KEY_DESERIALIZER=org.apache.kafka.common.serialization.StringDeserializer
+      - SPRING_KAFKA_CONSUMER_VALUE_DESERIALIZER=org.springframework.kafka.support.serializer.JsonDeserializer
+      - SPRING_KAFKA_CONSUMER_PROPERTIES_SPRING_JSON_TRUSTED_PACKAGES=vn.edu.iuh.fit.scheduleservice.dtos
+      - SPRING_KAFKA_PRODUCER_KEY_SERIALIZER=org.apache.kafka.common.serialization.StringSerializer
+      - SPRING_KAFKA_PRODUCER_VALUE_SERIALIZER=org.springframework.kafka.support.serializer.JsonSerializer
+    ports:
+      - "8085:8085"
+    depends_on:
+      - service-registry
+      - config-server
+      - mongodb
+      - apigateway
+      - redis
+      - kafka
+    networks:
+      - backend
+      - mongodb-net
+      - redis-net
+      - kafka-net
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: 512M
+        reservations:
+          memory: 256M
+
 
 volumes:
   postgres-data:
