add config payment-service and notification-service to docker

--- a/Backend/settings.gradle
+++ b/Backend/settings.gradle
@@ -9,4 +9,4 @@ include 'enroll-service'
 include 'schedule-service'
 include 'grade-management-service'
 include 'notification-service'
-
+include 'payment-service'
