--- a/Backend/enroll-service/src/main/resources/application.yaml
+++ b/Backend/enroll-service/src/main/resources/application.yaml
@@ -23,6 +23,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
   data:
     redis:
       database: 0
